--- a/app/src/main/res/menu/menu_frag_master_list.xml
+++ b/app/src/main/res/menu/menu_frag_master_list.xml
@@ -21,50 +21,44 @@
         android:id="@+id/action_select_all_favorites"
         android:title="Select all favorites"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_select_all_items"
         android:title="Select all items"
         android:orderInCategory="105"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_deselect_all_items"
         android:title="Deselect all items"
         android:icon="@drawable/ic_action_cancel"
         android:orderInCategory="110"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_show_master_list_sort_dialog"
         android:title="Sorting"
         android:orderInCategory="120"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_set_manual_sort_order"
         android:title="Manual sort order"
         android:orderInCategory="130"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_cull_items"
         android:title="Cull items"
         android:orderInCategory="140"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_manage_groups"
-        android:title="Manage locations"
+        android:id="@+id/action_refresh"
+        android:title="Refresh"
         android:orderInCategory="150"
-        android:showAsAction="never" />
-
-    <item
-        android:id="@+id/action_manage_item_location"
-        android:title="Manage item location"
-        android:orderInCategory="160"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_scan_barcodes"
@@ -76,6 +70,6 @@
         android:id="@+id/action_show_scanned_items"
         android:title="Show scanned items"
         android:orderInCategory="180"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
 </menu>
