--- a/app/src/main/res/layout/row_master_list_item_list.xml
+++ b/app/src/main/res/layout/row_master_list_item_list.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:background="@drawable/rec_genoa_no_stroke">
+    android:background="@drawable/rec_genoa_no_stroke"
+    android:orientation="horizontal"
+    android:padding="10dp">
 
     <CheckBox
         android:id="@+id/ckBox"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
         style="@style/ItemListRow"
-        android:text="Item Name"/>
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Item Name" />
 
     <ImageButton
         android:id="@+id/btnFavorite"
